...
                                            <action selector="alertsInAreaButtonPressed:" destination="1Nk-0b-wXD" id="avG-9R-OcN"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="P5q-Jx-Phh"/>
                                    <barButtonItem image="icLocation" id="OPC-ew-Vud">
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Go To Location"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="goToLocation:" destination="1Nk-0b-wXD" id="stg-zs-cgc"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="hga-eT-mYe"/>
...
                        <variation key="heightClass=regular-widthClass=regular">
                            <mask key="subviews">
                                <include reference="Qyr-NB-cah"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Traffic Map" id="7DF-yq-rSE">
                        <rightBarButtonItems>
                            <barButtonItem image="icMenu" id="6VY-LF-EDH">
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Menu"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="travelerInfoAction:" destination="1Nk-0b-wXD" id="Lvg-aY-YIS"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem image="icRefresh" id="taC-KG-CUf">
...
