...

class AmtrakCascadesViewController: UIViewController, UITableViewDelegate, UITableViewDataSource  {

    let cellIdentifier = "AmtrakCell"
    let segueAmtrakSchedulesViewController = "AmtrakCascadesScheduleViewController"

    let menu_options = ["Buy Tickets on Amtrak.com", "Check Schedules and Status"]
    let amtrakUrlString = "https://www.amtrakcascades.com/buy-tickets"

    @IBOutlet weak var tableView: UITableView!
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
...
